--- a/Solution/Console/Console.csproj
+++ b/Solution/Console/Console.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Model\Model.csproj" />
+    <ProjectReference Include="..\DungeonMap\DungeonMap.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
