--- a/Solution/Raylib/Raylib.csproj
+++ b/Solution/Raylib/Raylib.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Model\Model.csproj" />
-    <ProjectReference Include="..\Model.IO\Model.IO.csproj" />
+    <ProjectReference Include="..\DungeonMap\DungeonMap.csproj" />
+    <ProjectReference Include="..\DungeonMap.IO\DungeonMap.IO.csproj" />
   </ItemGroup>
 
 </Project>
