--- a/Solution/DungeonMap.IO/DungeonMap.IO.csproj
+++ b/Solution/DungeonMap.IO/DungeonMap.IO.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <_UnityProjectDir>$(SolutionDir)..\DC Jam 2024 Unity\Assets\Dependencies\DungeonMap.IO\</_UnityProjectDir>
+    <_UnityProjectDir>$(ProjectDir)..\..\DC Jam 2024 Unity\Assets\Dependencies\DungeonMap.IO</_UnityProjectDir>
 
   </PropertyGroup>
 
@@ -20,14 +20,18 @@
 
     <Target Name="CopyToUnity" AfterTargets="Build">
       <ItemGroup>
-      <_FilesToCopy Include="$(TargetDir)DungeonMap.IO.*"/>
+      <_FilesToCopy Include="$(TargetDir)\DungeonMap.IO.*"/>
     </ItemGroup>
     <ItemGroup>
 
     </ItemGroup>
     <Message Text="_FilesToCopy: @(_FilesToCopy)" Importance="high"/>
-    <Message Text="Destination: @(_FilesToCopy->'$(_UnityProjectDir)%(RecursiveDir)%(Filename)%(Extension)')" Importance="high"/>
-    <Copy SourceFiles="@(_FilesToCopy)" DestinationFiles="@(_FilesToCopy->'$(_UnityProjectDir)%(RecursiveDir)%(Filename)%(Extension)')"/>
+    <Message Text="Destination: @(_FilesToCopy->'$(_UnityProjectDir)\%(RecursiveDir)%(Filename)%(Extension)')" Importance="high"/>
+    <Copy 
+      SourceFiles="@(_FilesToCopy)" 
+      DestinationFiles="@(_FilesToCopy->'$(_UnityProjectDir)\%(RecursiveDir)%(Filename)%(Extension)')"
+      SkipUnchangedFiles="true"
+      />
   </Target>
 
 
