--- a/Solution/DungeonMap/DungeonMap.csproj
+++ b/Solution/DungeonMap/DungeonMap.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
-    <_UnityProjectDir>$(SolutionDir)..\DC Jam 2024 Unity\Assets\Dependencies\DungeonMap\</_UnityProjectDir>
+    <_UnityProjectDir>$(ProjectDir)..\..\DC Jam 2024 Unity\Assets\Dependencies\DungeonMap</_UnityProjectDir>
   </PropertyGroup>
 
 
@@ -17,8 +17,12 @@
 
     </ItemGroup>
     <Message Text="_FilesToCopy: @(_FilesToCopy)" Importance="high"/>
-    <Message Text="Destination: @(_FilesToCopy->'$(_UnityProjectDir)%(RecursiveDir)%(Filename)%(Extension)')" Importance="high"/>
-    <Copy SourceFiles="@(_FilesToCopy)" DestinationFiles="@(_FilesToCopy->'$(_UnityProjectDir)%(RecursiveDir)%(Filename)%(Extension)')"/>
+    <Message Text="Destination: @(_FilesToCopy->'$(_UnityProjectDir)\%(RecursiveDir)%(Filename)%(Extension)')" Importance="high"/>
+    <Copy 
+      SourceFiles="@(_FilesToCopy)" 
+      DestinationFiles="@(_FilesToCopy->'$(_UnityProjectDir)\%(RecursiveDir)%(Filename)%(Extension)')"
+      SkipUnchangedFiles="true"
+      />
   </Target>
 
 </Project>
