--- a/Solution/Unity/MapGenerator/MapGenerator.csproj
+++ b/Solution/Unity/MapGenerator/MapGenerator.csproj
@@ -5,7 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
-    <_UnityManagedPath>D:\Unity  Editors\2022.3.6f1\Editor\Data\Managed</_UnityManagedPath>
+    <!-- <_UnityManagedPath>D:\Unity  Editors\2022.3.6f1\Editor\Data\Managed</_UnityManagedPath> -->
+    <_UnityManagedPath>$(ProjectDir)..\ManagedLibs\</_UnityManagedPath>
     <_UnityProjectDir>$(ProjectDir)..\..\..\DC Jam 2024 Unity</_UnityProjectDir>
     <_OutDepsDir>$(_UnityProjectDir)\Assets\Dependencies\MapGenerator</_OutDepsDir>
     <_ScriptAssembliesDir>$(_UnityProjectDir)\Library\ScriptAssemblies</_ScriptAssembliesDir>
@@ -20,7 +21,11 @@
     </ItemGroup>
     <Message Text="_FilesToCopy: @(_FilesToCopy)" Importance="high"/>
     <Message Text="Destination: @(_FilesToCopy->'$(_OutDepsDir)\%(RecursiveDir)%(Filename)%(Extension)')" Importance="high"/>
-    <Copy SourceFiles="@(_FilesToCopy)" DestinationFiles="@(_FilesToCopy->'$(_OutDepsDir)\%(RecursiveDir)%(Filename)%(Extension)')"/>
+    <Copy 
+      SourceFiles="@(_FilesToCopy)" 
+      DestinationFiles="@(_FilesToCopy->'$(_OutDepsDir)\%(RecursiveDir)%(Filename)%(Extension)')"
+      SkipUnchangedFiles="true"
+      />
   </Target>
 
   <ItemGroup>
@@ -29,10 +34,10 @@
 
   <ItemGroup>
     <Reference Include="Unity.ProBuilder">
-      <HintPath>$(_ScriptAssembliesDir)\Unity.ProBuilder.dll</HintPath>
+      <HintPath>$(_UnityManagedPath)\Unity.ProBuilder.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>$(_UnityManagedPath)\UnityEngine\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>$(_UnityManagedPath)\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
 
