chore: Add Materials to Unity Project.

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 
 # Ignore Code Coverage Report Directory
 html-coverage-report/
+Solution/dungeoneering.config
+Solution/dungeoneering.config
