--- a/Solution/.editorconfig
+++ b/Solution/.editorconfig
@@ -371,8 +371,8 @@ dotnet_diagnostic.IDE0005.severity = warning
 dotnet_diagnostic.IDE0055.severity = warning
 
 # Styling for tests differ
-[Tests/*.{cs}]
+[Tests/**/*.{cs}]
 dotnet_diagnostic.IDE0055.severity = none
 
-[Tests/*.{cs}]
+[Tests/**/*.{cs}]
 dotnet_diagnostic.IDE1006.severity = none
