--- a/Solution/Tests/Tests.csproj
+++ b/Solution/Tests/Tests.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\Console\Console.csproj" />
     <ProjectReference Include="..\DungeonMap\DungeonMap.csproj" />
     <ProjectReference Include="..\DungeonMap.IO\DungeonMap.IO.csproj" />
+    <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
   </ItemGroup>
 
 </Project>
