refactor: Combine DungeonCrawler files into single project.

--- a/Solution/Console/Console.csproj
+++ b/Solution/Console/Console.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\DungeonMap\DungeonMap.csproj" />
+    <PackageReference Include="NLua" Version="1.7.2" />
   </ItemGroup>
 
   <PropertyGroup>
