--- a/Solution/Raylib/Raylib.csproj
+++ b/Solution/Raylib/Raylib.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DungeonMap\DungeonMap.csproj" />
-    <ProjectReference Include="..\DungeonMap.IO\DungeonMap.IO.csproj" />
+    <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
+    <ProjectReference Include="..\DungeonCrawler.IO\DungeonCrawler.IO.csproj" />
   </ItemGroup>
 
 </Project>
