--- a/Solution/Console/Console.csproj
+++ b/Solution/Console/Console.csproj
@@ -4,6 +4,10 @@
     <PackageReference Include="NLua" Version="1.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
