--- a/Solution/DungeonCrawler/DungeonCrawler.csproj
+++ b/Solution/DungeonCrawler/DungeonCrawler.csproj
@@ -8,6 +8,10 @@
     <_UnityProjectDir>$(ProjectDir)..\..\DC Jam 2024 Unity\Assets\Dependencies\DungeonCrawler</_UnityProjectDir>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLua" Version="1.7.2" />
+  </ItemGroup>
+
 
   <Target Name="CopyToUnity" AfterTargets="Build">
       <ItemGroup>
@@ -18,10 +22,7 @@
     </ItemGroup>
     <Message Text="_FilesToCopy: @(_FilesToCopy)" Importance="high" />
     <Message Text="Destination: @(_FilesToCopy->'$(_UnityProjectDir)\%(RecursiveDir)%(Filename)%(Extension)')" Importance="high" />
-    <Copy 
-      SourceFiles="@(_FilesToCopy)" 
-      DestinationFiles="@(_FilesToCopy->'$(_UnityProjectDir)\%(RecursiveDir)%(Filename)%(Extension)')" 
-      SkipUnchangedFiles="true" />
+    <Copy SourceFiles="@(_FilesToCopy)" DestinationFiles="@(_FilesToCopy->'$(_UnityProjectDir)\%(RecursiveDir)%(Filename)%(Extension)')" SkipUnchangedFiles="true" />
   </Target>
 
 </Project>
