feat: JavaScriptEventAction should update PlayerView.

--- a/DC Jam 2024 Unity/Assets/Tests/ScriptingTests/ScriptingTests.asmdef
+++ b/DC Jam 2024 Unity/Assets/Tests/ScriptingTests/ScriptingTests.asmdef
@@ -12,7 +12,8 @@
     "precompiledReferences": [
         "DungeonCrawler.dll",
         "DungeonCrawlerUnity.dll",
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "DungeonCrawler.Scripting.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
