feat: Implement proof of concept of Lua interpreter.

--- a/Solution/Tests/Tests.csproj
+++ b/Solution/Tests/Tests.csproj
@@ -33,6 +33,7 @@
     <ProjectReference Include="..\DungeonCrawler.IO\DungeonCrawler.IO.csproj" />
     <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
     <ProjectReference Include="..\DungeonCrawler.Scripting\DungeonCrawler.Scripting.csproj" />
+    <ProjectReference Include="..\DungeonCrawler.Lua\DungeonCrawler.Lua.csproj" />
   </ItemGroup>
 
 </Project>
