--- a/Solution/DungeonCrawler.Lua/DungeonCrawler.Lua.csproj
+++ b/Solution/DungeonCrawler.Lua/DungeonCrawler.Lua.csproj
@@ -14,6 +14,10 @@
     <PackageReference Include="MoonSharp" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
+  </ItemGroup>
+
   <Target Name="CopyToUnity" AfterTargets="Build">
     <ItemGroup>
       <_FilesToCopy Include="$(TargetDir)\DungeonCrawler.Lua.*" />
