chore: Remove UpdateLuaInitializer from Hardwired project.

--- a/Solution/DungeonCrawler.Lua.Hardwired/DungeonCrawler.Lua.Hardwired.csproj
+++ b/Solution/DungeonCrawler.Lua.Hardwired/DungeonCrawler.Lua.Hardwired.csproj
@@ -14,16 +14,18 @@
     
   </PropertyGroup>
 
-  <Target Name="UpdateLuaInitializer" AfterTargets="Build">
-    <!-- 
+
+  <!-- 
       This builds LuaInitializer.cs which modifies DungeonCrawler.Lua which is a
       dependency of this project. This is a cyclical dependency. However, this
       should be sufficient *most* of the time. Essentially, running build twice
       should resolve the problem. There is likely a way to detect when this should
       be run.
     -->
+  <!-- <Target Name="UpdateLuaInitializer" AfterTargets="Build">
+    
     <Exec Command="dotnet $(TargetDir)$(TargetFileName)" />
-    <Exec Command=".\repl\MoonSharp.exe -W hardwired.lua ..\DungeonCrawler.Lua\LuaInitializer.cs --internals --class:LuaInitializer --namespace:CaptainCoder.Dungeoneering.Scripting" />
-  </Target>
+    <Exec Command="bash build.sh" />
+  </Target> -->
 
 </Project>
