--- a/Solution/Tests/Tests.csproj
+++ b/Solution/Tests/Tests.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="NSubstitute" Version="5.1.0" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="20.0.34" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="20.0.34" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -33,6 +35,7 @@
     <ProjectReference Include="..\DungeonCrawler.IO\DungeonCrawler.IO.csproj" />
     <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
     <ProjectReference Include="..\DungeonCrawler.Lua\DungeonCrawler.Lua.csproj" />
+    <ProjectReference Include="..\DungeonCrawler.Editor\DungeonCrawler.Editor.csproj" />
   </ItemGroup>
 
 </Project>
