--- a/Solution/Raylib/Raylib.csproj
+++ b/Solution/Raylib/Raylib.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
     <ProjectReference Include="..\DungeonCrawler.IO\DungeonCrawler.IO.csproj" />
+    <ProjectReference Include="..\DungeonCrawler.Editor\DungeonCrawler.Editor.csproj" />
   </ItemGroup>
 
 </Project>
