--- a/Solution/DungeonCrawler.Editor/DungeonCrawler.Editor.csproj
+++ b/Solution/DungeonCrawler.Editor/DungeonCrawler.Editor.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="20.0.34" />
     <PackageReference Include="Raylib-cs" Version="6.0.0" />
   </ItemGroup>
