chore: Implement texture loading prototype.

--- a/Solution/Console/Console.csproj
+++ b/Solution/Console/Console.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
+    <ProjectReference Include="..\DungeonCrawler.IO\DungeonCrawler.IO.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
