feat: Implement MaterialCache and add textures to walls.

--- a/Solution/Unity/MapGenerator/MapGenerator.csproj
+++ b/Solution/Unity/MapGenerator/MapGenerator.csproj
@@ -43,6 +43,9 @@
     <Reference Include="NaughtyAttributes.Core">
       <HintPath>$(_UnityManagedPath)\NaughtyAttributes.Core.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.ImageConversionModule">
+      <HintPath>$(_UnityManagedPath)\UnityEngine.ImageConversionModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
