chore: Implement BuildMap

--- a/Solution/DungeonCrawler.Combat/DungeonCrawler.Combat.csproj
+++ b/Solution/DungeonCrawler.Combat/DungeonCrawler.Combat.csproj
@@ -5,6 +5,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
+    <_ProjectName>DungeonCrawler.Combat</_ProjectName>
+    <_UnityProjectDir>$(ProjectDir)..\..\DC Jam 2024 Unity\Assets\Dependencies</_UnityProjectDir>
+    <_ScriptingDir>$(_UnityProjectDir)\$(_ProjectName)</_ScriptingDir>
   </PropertyGroup>
+
+  <Target Name="CopyToUnity" AfterTargets="Build">
+    <ItemGroup>
+      <_FilesToCopy Include="$(TargetDir)\$(_ProjectName).*" />
+    </ItemGroup>
+    <Message Text="_FilesToCopy: @(_FilesToCopy)" Importance="high" />
+    <Message Text="Destination: @(_FilesToCopy->'$(_ScriptingDir)\%(RecursiveDir)%(Filename)%(Extension)')" Importance="high" />
+    <Copy SourceFiles="@(_FilesToCopy)" DestinationFiles="@(_FilesToCopy->'$(_ScriptingDir)\%(RecursiveDir)%(Filename)%(Extension)')" SkipUnchangedFiles="true" />
+  </Target>
 
 </Project>
