--- a/Solution/DungeonCrawler.Editor/DungeonCrawler.Editor.csproj
+++ b/Solution/DungeonCrawler.Editor/DungeonCrawler.Editor.csproj
@@ -16,9 +16,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PublishSingleFile>true</PublishSingleFile>
+    <!-- <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier> -->
   </PropertyGroup>
 
 </Project>
