chore: Combat with fewer characters.

--- a/Solution/DungeonCrawler.Lua/DungeonCrawler.Lua.csproj
+++ b/Solution/DungeonCrawler.Lua/DungeonCrawler.Lua.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DungeonCrawler\DungeonCrawler.csproj" />
+    <ProjectReference Include="..\DungeonCrawler.Combat\DungeonCrawler.Combat.csproj" />
   </ItemGroup>
 
   <Target Name="CopyToUnity" AfterTargets="Build">
