--- a/Solution/Unity/DungeonCrawlerUnity/DungeonCrawlerUnity.csproj
+++ b/Solution/Unity/DungeonCrawlerUnity/DungeonCrawlerUnity.csproj
@@ -59,6 +59,9 @@
     <Reference Include="UnityEngine.GridModule">
       <HintPath>$(_UnityManagedPath)\UnityEngine.GridModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AudioModule">
+      <HintPath>$(_UnityManagedPath)\UnityEngine.AudioModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
