--- a/Solution/Unity/DungeonCrawlerUnity/DungeonCrawlerUnity.csproj
+++ b/Solution/Unity/DungeonCrawlerUnity/DungeonCrawlerUnity.csproj
@@ -62,6 +62,9 @@
     <Reference Include="UnityEngine.AudioModule">
       <HintPath>$(_UnityManagedPath)\UnityEngine.AudioModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>$(_UnityManagedPath)\UnityEngine.IMGUIModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
